--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-firebase/app": "^11.4.1",
     "@react-native-firebase/auth": "^11.4.1",
+    "@react-navigation/native": "^5.9.4",
     "@use-expo/font": "^2.0.0",
     "expo": "~41.0.1",
     "expo-app-loading": "^1.0.3",
+    "expo-image-picker": "~10.1.4",
     "expo-linear-gradient": "~9.1.0",
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
@@ -28,8 +30,7 @@
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
-    "react-navigation-tabs": "^2.11.1",
-    "expo-image-picker": "~10.1.4"
+    "react-navigation-tabs": "^2.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
